--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -8,7 +8,7 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,1
+monitor=VGA-1,preferred,auto,1
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -30,10 +30,10 @@ env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
-    kb_layout = us
-    kb_variant =
+    kb_layout = us,ara
+    kb_variant = qwerty
     kb_model =
-    kb_options =
+    kb_options = grp:alt_shift_space_toggle
     kb_rules =
 
     follow_mouse = 1
@@ -75,8 +75,8 @@ decoration {
     }
 
     drop_shadow = false
-    shadow_range = 4
-    shadow_render_power = 3
+    shadow_range = 0
+    shadow_render_power = 0
     col.shadow = rgba(1a1a1aee)
 }
 
@@ -113,7 +113,9 @@ gestures {
 
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
+ disable_splash_rendering = true
+ force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
+ disable_autoreload = true
 }
 
 # Example per-device config
@@ -192,4 +194,4 @@ bindm = $mainMod, mouse:273, resizewindow
 
 
 exec-once = hyprctl dispatch exec "waybar"
-exec-once = hyprctl dispatch exec "swaybg -i ~/Pictures/bricks.png"
+#exec-once = hyprctl dispatch exec "swaybg -i ~/Pictures/bricks.png"
