added workspace specific app startup

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -33,7 +33,7 @@ input {
     kb_layout = us,ara
     kb_variant = qwerty
     kb_model =
-    kb_options = grp:alt_shift_space_toggle
+    kb_options = grp:alt_space_toggle
     kb_rules =
 
     follow_mouse = 1
@@ -133,6 +133,12 @@ windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
 
 windowrule = noborder,title:^(.*Vivaldi.*)$
 #windowrule = noborder,title:^(.*Discord.*)$
+
+
+windowrule = workspace 2, ^(.*Vivaldi.*)$
+windowrule = workspace 3, ^(.*discord.*)$
+windowrule = workspace 4, ^(.*Element.*)$
+
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = ALT
